responsive background fixed, no overflow projects

--- a/src/App.scss
+++ b/src/App.scss
@@ -10,11 +10,13 @@ $yellow: #f4d35e;
 $black: #000000;
 
 .content-wrapper {
-    height: 100vh;
+    height: 100%;
+    min-height: 100vh;
     width: 100%;
 
     .full-box {
         height: 100%;
+        min-height: 100vh;
         width: 100%;
         display: flex;
         justify-content: center;
