--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -5,6 +5,7 @@ $yellow: #f4d35e;
     justify-content: space-around;
     align-items: center;
     height: 100%;
+    min-height: 100vh;
     width: 75%;
     
     .landing-img {
