--- a/src/pages/Projects.scss
+++ b/src/pages/Projects.scss
@@ -12,5 +12,7 @@
         justify-content: center;
         align-items: center;
         flex-wrap: wrap;
+        width: 100%;
+        height: 100%;
     }
 }
